fixed the alignment issue

--- a/src/app/commodity/commodity.component.scss
+++ b/src/app/commodity/commodity.component.scss
@@ -38,7 +38,17 @@
     justify-content: space-around;
     .item {
         font-size: 12px;
-        max-width: 150px;
+        width: 15%;
+        margin: 0 0 0 26px;
+        strong {
+            font-size: 16px;
+            display: block;
+            margin: 0 0 6px;
+        }
+    }
+    .item-desc {
+        font-size: 12px;
+        width: 20%;
         margin: 0 0 0 26px;
         strong {
             font-size: 16px;
